# OpenTune

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  MACOS_PORT.md  NOTICE.txt  NOTICE.zh-CN.txt  README.md  STATEMENTS.txt
.github/workflows/: build.yml  dev-build.yml
.planning/: 2025-04-28-ara-shared-store.md  2026-04-25-vst3-ara-transport-projection-f0-diagnostics-plan.md  ARA_INVESTIGATION.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md  VST3Merge.md
.planning/debug/: knowledge-base.md  reaper-cut-focus-baseline.md  reaper-vst3-auto-crash-after-originalf0-fix-analysis.md  reaper-vst3-auto-crash.md  reaper-vst3-record-originalf0-missing.md
.planning/debug/resolved/: vst3-plugin-editor-isolation-regression.md
.planning/milestones/: v1.3.2-AUDIT.md  v1.3.2-REQUIREMENTS.md  v1.3.2-ROADMAP.md  v1.4-ROADMAP.md  v2.2-AUDIT.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md  v2.3-ROADMAP.md
.planning/phases/01-双格式构建基础/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-ARA组件迁移/: 02-VERIFICATION.md
.planning/phases/03-Processor条件化/: 03-VERIFICATION.md
.planning/phases/04-编辑器与宿主分离/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-ara-playback/: 05-01-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-编译验证/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-BUILD-COMPARISON.md  06-04-PLAN.md  06-04-SUMMARY.md  06-VERIFICATION.md
.planning/phases/07-控制与时间基线收敛/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-HUMAN-UAT.md  07-VERIFICATION.md  deferred-items.md
.planning/phases/08-playback-read/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-VERIFICATION.md
.planning/phases/09-lifecycle-binding/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  (+5 more)
.planning/plans/: 2026-04-29-undo-redo-design.md  memory-optimization-render-pipeline.md  memory-optimization-test-verification.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/scripts/: invoke-msvc-cmake.ps1
JUCE-master/examples/: codemap.md
JUCE-master/extras/: codemap.md
JUCE-master/modules/: codemap.md
Source/: MaterializationStore.cpp  MaterializationStore.h  PluginProcessor.cpp  PluginProcessor.h  SourceStore.cpp  SourceStore.h  StandaloneArrangement.cpp  StandaloneArrangement.h
Source/ARA/: OpenTuneDocumentController.cpp  OpenTuneDocumentController.h  OpenTunePlaybackRenderer.cpp  OpenTunePlaybackRenderer.h  VST3AraSession.cpp  VST3AraSession.h
Source/Audio/: AsyncAudioLoader.h  AsyncInferenceProcessor.h  AudioFormatRegistry.cpp  AudioFormatRegistry.h  codemap.md
Source/DSP/: ChromaKeyDetector.cpp  ChromaKeyDetector.h  CrossoverMixer.cpp  CrossoverMixer.h  MelSpectrogram.cpp  MelSpectrogram.h  ResamplingManager.cpp  ResamplingManager.h  ScaleInference.cpp  ScaleInference.h  codemap.md
Source/Editor/: AutoRenderOverlayComponent.h  EditorFactory.h  EditorFactoryPlugin.cpp  RenderBadgeComponent.h  codemap.md
Source/Host/: HostIntegration.h  HostIntegrationStandalone.cpp  codemap.md
Source/Inference/: DmlConfig.h  DmlVocoder.cpp  DmlVocoder.h  F0InferenceService.cpp  F0InferenceService.h  GameExtractor.cpp  GameExtractor.h  GameInferenceService.cpp  GameInferenceService.h  GameTypes.h  HifiGANVocoder.cpp  HifiGANVocoder.h  IF0Extractor.h  IVocoder.h  InferenceManager.cpp  InferenceManager.h  ModelFactory.cpp  ModelFactory.h  OnnxVocoderBase.cpp  OnnxVocoderBase.h  PCNSFHifiGANVocoder.cpp  PCNSFHifiGANVocoder.h  RMVPEExtractor.cpp  RMVPEExtractor.h  RenderCache.cpp  RenderCache.h  RenderingManager.cpp  RenderingManager.h  VocoderDomain.cpp  VocoderDomain.h  VocoderFactory.cpp  VocoderFactory.h  VocoderInferenceService.cpp  VocoderInferenceService.h  VocoderInterface.h  VocoderRenderScheduler.cpp  VocoderRenderScheduler.h  codemap.md
Source/Plugin/: PluginEditor.cpp  PluginEditor.h
Source/Services/: F0ExtractionService.cpp  F0ExtractionService.h  ImportedClipF0Extraction.h  codemap.md
Source/Standalone/: EditorFactoryStandalone.cpp  PluginEditor.cpp  PluginEditor.h  StandaloneFastQuitApp.cpp  codemap.md
Source/Utils/: AccelerationDetector.cpp  AccelerationDetector.h  AppLogger.cpp  AppLogger.h  AppPreferences.cpp  AppPreferences.h  AudioEditingScheme.h  ChannelLayoutLogger.cpp  ChannelLayoutLogger.h  ClipSnapshot.h  CpuBudgetManager.cpp  CpuBudgetManager.h  CpuFeatures.cpp  CpuFeatures.h  D3D12AgilityBootstrap.cpp  DmlRuntimeVerifier.cpp  DmlRuntimeVerifier.h  Error.h  F0Timeline.h  GpuDetector.cpp  GpuDetector.h  InferenceGate.h  KeyShortcutConfig.h  LocalizationManager.h  LockFreeQueue.h  MaterializationState.h  MaterializationTimelineProjection.h  ModelPathResolver.h  MouseTrailConfig.h  Note.h  NoteGenerator.cpp  NoteGenerator.h  OnnxRuntimeDelayLoadHook.cpp  ParameterPanelSync.h  PianoKeyAudition.cpp  PianoKeyAudition.h  PianoRollEditAction.cpp  PianoRollEditAction.h  PianoRollVisualPreferences.h  PitchControlConfig.h  (+23 more)
Tests/: TestEditorFactoryStub.cpp  TestMain.cpp  TestSupport.h
docs/: UserGuide.html  UserGuide_en.html  UserGuide_es.html  UserGuide_ja.html  UserGuide_ru.html
knowledge/: AGENTS.md  BUILD_AND_TEST.md  CURRENT.md  unify-selection-mechanism-tasks.md
knowledge/current/: _index.md  architecture.md  constitution.md  glossary.md
knowledge/snapshots/: _index.md
models/: rmvpe.onnx
onnxruntime-dml-1.24.4/: .signature.p7s  Microsoft.ML.OnnxRuntime.DirectML.nuspec
onnxruntime-dml-1.24.4/_rels/: .rels
pc_nsf_hifigan_44.1k_ONNX/: oudep.yaml  vocoder.yaml
scripts/: install.command  sign-and-package.sh
(+364 files in other folders)
